tests/neg/i18584/Test.scala
class Test {
  new U
  new H() // error
  new T.H() // error
}
